--- a/history.txt
+++ b/history.txt
@@ -3,13 +3,23 @@ History
 =======
 
 0.1.0 (2022–05–05)
- — — — — — — — — -
+— — — — — — — — -
  * First public release.
 
 0.2.0 (2022–05–09)
-  — — — — — — — — -
+— — — — — — — — -
   * Major updated release.
   * Changes include: edits to API, inclusion/writing of
     demonstrations 4 and 5, and a revamped engine core to utilize a configurable
     static graph optimization/framework to obtain a 5-7.5 times speedup of
     simulated neural dynamics.
+
+0.3.0-alpha (2022–05–21)
+— — — — — — — — -
+  * NGCGraph .compile() further tweaked to use an injection/clamping look-up
+    system to allow for dynamic changes to occur w/in a static graph compiled
+    simulated NGC system
+  * Cable API slightly modified to increase flexiblity (demonstrations and
+    tests modified to reflect updated API)
+  * Demonstration 6 released showcasing how to use ngc-learn to construct/fit a
+    restricted Boltzmann machine
