jax-backend reformulation of ngc-learn initial commit

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@
 Core Team
 Alexander Ororbia <ago@cs.rit.edu>
 Ankur Mali <aam35@psu.edu>
+William Gebhardt <wdg1351@rit.edu>
 
 Contributors
 Maxbeth2 (Ohas)
