clean-up of upper level docs

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,8 +6,9 @@
 
 Core Team
 Alexander Ororbia <ago@cs.rit.edu>
-Ankur Mali <aam35@psu.edu>
 William Gebhardt <wdg1351@rit.edu>
+Viet Dung Nguyen <vn1747@rit.edu>
+Ankur Mali <aam35@psu.edu>
 
 Contributors
 Maxbeth2 (Ohas)
