update to support docs in prep for 2.0.0

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,10 +5,11 @@
 # The email address is not required for organizations.
 
 Core Team
-Alexander Ororbia <ago@cs.rit.edu>
-William Gebhardt <wdg1351@rit.edu>
-Viet Dung Nguyen <vn1747@rit.edu>
-Ankur Mali <aam35@psu.edu>
+Alexander Ororbia <agocse109@gmail.com>
+William Gebhardt <wdg1351@g.rit.edu>
+Viet Dung Nguyen <vn1747@g.rit.edu>
+Ankur Mali <ankurmali07@gmail.com>
+Faeze Habibi <habibifaeze.66@gmail.com>
 
 Contributors
 Maxbeth2 (Ohas)
