--- a/history.txt
+++ b/history.txt
@@ -61,3 +61,18 @@ History
   * clean-up of utility sub-package files
   * minor clean-up, revisions, bug fixes and doc-string updates
   * model museum updates reflect current state of ngc-learn/sim-lib
+
+2.0.0
+— — — — — — — — -
+  * upgrade of framework/components to integrate w/ upgrade ngc-sim-lib
+  * clean-up and additions to utils, including analysis probes (nonlinear attention, linear model) and image patching tools
+  * upgrade/clean-up of ode_utils integration backend (includes rk4 now), addition of ode tools
+  * now features in-built conv/deconv support and several hebbian/stdp synaptic components for conv/deconv
+  * integration of hodgkin-huxley cell
+  * integration of phasor cell, resonate-and-fire cell
+  * integration and support for short-term plasticity/dynamic synapse component, modulated stdp
+  * error cells revised to be more flexible (multivariate gaussian/laplacian/bernoulli)
+  * addition of sindy tutorial in docs
+  * integration of reinforce-synapse, block/partitioned synapse component ("patched-synapse")
+  * basic unit-tests (pytest framework) integrated to support dev
+  * includes support for Intel's lava-nc emulator (several spiking/stdp components that play with ngc-lava)
