Nudge of release to minor patched version 2.0.3 (#118)
* nudge of doc to 2.0.2 (#115)

Co-authored-by: Alexander Ororbia <ago@hal3.cs.rit.edu>

* minor edit to math in hh-lesson doc

* Fix workflow, numpy install, and pytest bug in github action workflows (#117)

* Update pyproject.toml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* minor nudge/cleanup to minor patched version 2.0.1

* minor nudge/cleanup to minor patched version 2.0.3

---------

Co-authored-by: Alexander Ororbia <ago@hal3.cs.rit.edu>
Co-authored-by: Viet Dung Nguyen <60036798+rxng8@users.noreply.github.com>

--- a/history.txt
+++ b/history.txt
@@ -80,3 +80,8 @@ History
   * integration of reinforce-synapse, block/partitioned synapse component ("patched-synapse")
   * basic unit-tests (pytest framework) integrated to support dev
   * includes support for Intel's lava-nc emulator (several spiking/stdp components that play with ngc-lava)
+
+2.0.3
+— — — — — — — — -
+  * Minor patch to point / depend on minor-patched ngcsimlib 1.0.1 (nudge to minor patched release)
+  * Added wrapper `inverse_sigmoid` for original `inverse_logistic` routine in model_utils (for convenience)
