--- a/history.txt
+++ b/history.txt
@@ -19,8 +19,7 @@ History
   * NGCGraph .compile() further tweaked to use an injection/clamping look-up
     system to allow for dynamic changes to occur w/in a static graph compiled
     simulated NGC system
-  * Cable API slightly modified to increase flexiblity (demonstrations and
-    tests modified to reflect updated API)
+  * Cable API slightly modified to increase flexibility (demonstrations and tests modified to reflect updated API)
   * Demonstration 6 released showcasing how to use ngc-learn to construct/fit a
     restricted Boltzmann machine
 
@@ -80,3 +79,16 @@ History
   * integration of reinforce-synapse, block/partitioned synapse component ("patched-synapse")
   * basic unit-tests (pytest framework) integrated to support dev
   * includes support for Intel's lava-nc emulator (several spiking/stdp components that play with ngc-lava)
+
+  3.0.0
+  — — — — — — — — -
+  * revisions made / upgrades applied to framework/simulation back-end to integrate major version v2 of ngc-sim-lib
+  * new harmonium/RBM model-museum exhibit written and tutorial integrated
+  * clean-up of utils and new integration of mixture models for utils.density (Gaussian, Bernoulli, & exponential mixtures)
+  * addition of new BernoulliErrorCell (binary cross-entropy node); added leakyNoiseCell to support contus-time RNNs
+  * model museum (ngc-museum) and tutorials updated to reflect newest ngc-sim-lib format
+  * clean-up/upgrade of docs to reflect new v3 version (and patches)
+  * all model-museum (standard/main) exhibits revised/updated to operate with new v3 ngclearn / v2 ngcsimlib
+  * integration/addition of RL-SNN model in model-museum
+  * integration of full dynamics synapses -- alpha, exponential, and double-exponential synaptic cables
+  * new metrics/clean-up of metrics in utils.metric_utils (e.g., KL divs, etc.)
